Corrected footer logo alignment

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -906,6 +906,7 @@ a {
   }
   .join-us {
     margin-right: 61px;
+    margin-bottom: 120px;
   }
 }
 @media screen and (min-width: 1200px) {
