--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -110,6 +110,7 @@
   }
   .join-us {
     margin-right: 61px;
+    margin-bottom: 120px;
   }
 }
 
